@@ -1,7 +1,7 @@
 (defproject voiceforce "0.1.0-SNAPSHOT"
   :description "FIXME: write this!"
   :url "http://example.com/FIXME"
-
+  :jvm-opts ["-Xmx4096M" "-XX:MaxPermSize=512m"]
   :dependencies [[org.clojure/clojure "1.6.0"]
                  [org.clojure/clojurescript "0.0-2342"]
                  [org.clojure/core.async "0.1.303.0-886421-alpha"]
